2007-07-16  Sam Weinig  <sam@webkit.org>

        Reviewed by Kevin McCullough.

        Breakup http/tests/security/cross-frame-access.html into multiple tests to
        make it easier to identify flaws should they arise.

        - Also factors out JS into a separate file.

        * http/tests/security/cross-frame-access-custom-expected.txt: Added.
        * http/tests/security/cross-frame-access-custom.html: Added.
        * http/tests/security/cross-frame-access-expected.txt:
        * http/tests/security/cross-frame-access-frames-expected.txt: Added.
        * http/tests/security/cross-frame-access-frames.html: Added.
        * http/tests/security/cross-frame-access-history-expected.txt: Added.
        * http/tests/security/cross-frame-access-history.html: Added.
        * http/tests/security/cross-frame-access-location-expected.txt: Added.
        * http/tests/security/cross-frame-access-location.html: Added.
        * http/tests/security/cross-frame-access-name-getter-expected.txt: Added.
        * http/tests/security/cross-frame-access-name-getter.html: Added.
        * http/tests/security/cross-frame-access.html:
        * http/tests/security/resources/cross-frame-access.js: Added.

2007-07-16  Anders Carlsson  <andersca@apple.com>

        Remove basic-auth.html, it no longer hangs on Leopard.
        
        * mac/leopard/Skipped:

2007-07-16  Mark Rowe  <mrowe@apple.com>

        Update expected result after r24302.

        * fast/css/empty-script-expected.txt:

2007-07-16  Rob Buis  <buis@kde.org>

        Reviewed by Maciej.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=14462
        non empty <style> element doesn't work

        * fast/css/empty-script-expected.txt: Added.
        * fast/css/empty-script.html: Added.

2007-07-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Adam.

        Update for changed behaviour now that we allow tab characters in input fields again
